--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Mini Calculator</title>
+  <title>Kumi's Calculator</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -12,19 +12,21 @@
       <button onclick="appendNumber('7')">7</button>
       <button onclick="appendNumber('8')">8</button>
       <button onclick="appendNumber('9')">9</button>
-      <button onclick="appendOperator('+')">+</button>
+      <button onclick="appendOperator('/')">÷</button>
 
       <button onclick="appendNumber('4')">4</button>
       <button onclick="appendNumber('5')">5</button>
       <button onclick="appendNumber('6')">6</button>
-      <button onclick="appendOperator('-')">−</button>
+      <button onclick="appendOperator('*')">×</button>
 
       <button onclick="appendNumber('1')">1</button>
       <button onclick="appendNumber('2')">2</button>
       <button onclick="appendNumber('3')">3</button>
-      <button onclick="clearDisplay()">C</button>
+      <button onclick="appendOperator('-')">−</button>
 
       <button onclick="appendNumber('0')">0</button>
+      <button onclick="appendOperator('+')">+</button>
+      <button onclick="clearDisplay()">C</button>
       <button onclick="calculate()" class="equal">=</button>
     </div>
   </div>
